--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "framer-motion": "^11.0.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "14.1.0",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
